[package]
name = "cargo-check"
version = "0.2.2"
authors = ["Ray Solomon <raybsolomon@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "wrapper around cargo rustc -- -Zno-trans"
keywords = ["subcommand", "cargo"]
readme = "README.md"
repository = "https://github.com/rsolomo/cargo-check"
homepage = "https://github.com/rsolomo/cargo-check"

[dependencies]
serde_json = "0.8"
